contact page and footer almost ready

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,22 @@
   <div>
     <img src="images/wideimagecomp2.jpeg" alt="Young couple in the mountains" class="contact_img">
   </div>
-  <div class="contact_points">
-    <img src="" >
+  <div class="contacts">
+    <div class="contact_points">
+      <img src="images/Home_icon.jpg" alt="Home icon">
+      <h3>1142 Yorkshire Circle Rocky Mount North Carolina 27801</h3>
+    </div>
+    <div class="contact_points">
+      <img src="images/Mail_icon.jpg" alt="Mail icon">
+      <h3>customerservice@rainydays.com</h3>
+    </div>
+    <div class="contact_points">
+      <img src="images/Phone_icon.jpg" alt="Phone icon">
+      <h3>252-955-4024</h3>  
+    </div>
+    <div class="contact_points">
+      <img src="images\FB_icon.png" alt="FB icon">
+      <h3>facebook.com/rainydays</h3>
+    </div>
   </div>
 </main>
