--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
         </div>
     </section>
   </main>
-  <footer> &copy; Bori Kokeny</footer>
+  <footer> 
+      <a href="contact.html">Contact Us</a>
+      <p>&copy; Bori Kokeny</p>
+    </footer>
 </body>
 </html>
