--- a/search.html
+++ b/search.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="#"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+        <a href="index.html"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
       <nav>
       <ul>
         <li><a href="men.html">men</a></li>
