--- a/checkout.html
+++ b/checkout.html
@@ -23,29 +23,49 @@
     </nav>
   </header>
   <main>
-    <div>
-      <img class="checkout_img" src="images/jakkedoble.jpg" alt="Two young women laughing">
+    <div class="container">
+      <img class="item-1" id="checkout_img" src="images/jakkedoble.jpg" alt="Two young women laughing">
     </div>
-    <form action="form-success.php" method="post"></form>
-    <fieldset>
-      <legend>My Cart</legend>
-      <label for="first_name">First name</label>
-      <input type="text" name="first_name" id="first_name" class="form__input">
-      <label for="last_name">Last name</label>
-      <input type="text" name="last_name" id="last_name" class="form__input">
-      <label for="address">Street address</label>
-      <input type="text" name="address" id="address">
-      <label for="postal_code">Postal code</label>
-      <input type="text" name="postal_code" id="postal_code" class="form__input" >
-      <label for="city">City</label>
-      <input type="text" name="city" id="city" class="form__input">
-      <label for="province">Province</label>
-      <input type="text" name="province" id="province" class="form__input">
-      <label for="country">Country</label>
-      <input type="text" name="country" id="country" class="form__input">
-      <label for="phone">Number</label>
-      <input type="tel" name="phone" id="phone" class="form__input">
-      <label for="email">e-mail</label>
-      <input type="email" name="email" id="email" class="form__input">
-    </fieldset>
+    <div class="item-2">
+      <form action="form-success.php" method="post"></form>
+      <fieldset>
+        <legend>My Cart</legend>
+        <label for="first_name">First name</label>
+        <input type="text" name="first_name" id="first_name" class="form__input">
+        <label for="last_name">Last name</label>
+        <input type="text" name="last_name" id="last_name" class="form__input">
+        <label for="address">Street address</label>
+        <input type="text" name="address" id="address">
+        <label for="postal_code">Postal code</label>
+        <input type="text" name="postal_code" id="postal_code" class="form__input" >
+        <label for="city">City</label>
+        <input type="text" name="city" id="city" class="form__input">
+        <label for="province">Province</label>
+        <input type="text" name="province" id="province" class="form__input">
+        <label for="country">Country</label>
+        <input type="text" name="country" id="country" class="form__input">
+        <label for="phone">Number</label>
+        <input type="tel" name="phone" id="phone" class="form__input">
+        <label for="email">e-mail</label>
+        <input type="email" name="email" id="email" class="form__input">
+      </fieldset>
+    </div>
+    <div class="item-3">
+      <h2>Review your order</h2>
+      <h3>Product</h3>
+      <h3>Qty</h3>
+      <h3>Subtotal</h3>
+      <p>BigCityLife Jacket M-Green</p>
+      <p>1</p>
+      <p>$ 250</p>
+      <p>Shipping</p>
+      <p>$ 20</p>
+      <p>Tax</p>
+      <p>$ 50</p>
+      <h3>Total</h3>
+      <h3>$ 320</h3>
+    </div>
+    <div class="item-4">
+      <a href="checkoutsuccess.html" class="checkout_cta">Confirm payment</a>
+    </div>
   </main>
