rearange grids, uhh

--- a/checkout.html
+++ b/checkout.html
@@ -22,47 +22,49 @@
       </ul>
     </nav>
   </header>
-  <main class="checkout">
-    <div class="checkout_picture">
-      <img class="item-1" id="checkout_img" src="images/Woman_in_yellow_jacket_on_the_cornfield.jpeg" alt="Two young women laughing">
-    </div>
-    <div>
-      <form method="POST">
-        <div>
-          <fieldset>
-            <legend>My Cart</legend>
-            <label for="first_name">First name</label>
-            <input type="text" name="first_name" id="first_name" class="form__input">
-            <label for="last_name">Last name</label>
-            <input type="text" name="last_name" id="last_name" class="form__input">
-            <label for="address">Street address</label>
-            <input type="text" name="address" id="address">
-            <label for="postal_code">Postal code</label>
-            <input type="text" name="postal_code" id="postal_code" class="form__input" >
-            <label for="city">City</label>
-            <input type="text" name="city" id="city" class="form__input">
-            <label for="province">Province</label>
-            <input type="text" name="province" id="province" class="form__input">
-            <label for="country">Country</label>
-            <input type="text" name="country" id="country" class="form__input">
-            <label for="phone">Number</label>
-            <input type="tel" name="phone" id="phone" class="form__input">
-            <label for="email">e-mail</label>
-            <input type="email" name="email" id="email" class="form__input">
-          </fieldset>
-        </div>  
-      </form>
-    </div>
-    <div class="review">
-            <h2>Review your order</h2>
-            <h3>Product Qty Subtotal</h3>
-            <p>BigCityLife Jacket 1 $ 250</p>
-            <p>Shipping $20</p>
-            <p>Tax $ 50</p>
-            <h3>Total $ 30</h3>
-    </div>
-    <div class="checkout_cta">
-          <a href="checkoutsuccess.html" >Confirm payment</a>
-    </div>
-   </div>
+  <main >
+    <section class="checkout">
+      <div class="checkout_picture">
+        <img class="item-1" id="checkout_img" src="images/Woman_in_yellow_jacket_on_the_cornfield.jpeg" alt="Two young women laughing">
+      </div>
+      <div>
+        <form method="POST">
+          <div>
+            <fieldset>
+              <legend>My Cart</legend>
+              <label for="first_name">First name</label>
+              <input type="text" name="first_name" id="first_name" class="form__input">
+              <label for="last_name">Last name</label>
+              <input type="text" name="last_name" id="last_name" class="form__input">
+              <label for="address">Street address</label>
+              <input type="text" name="address" id="address">
+              <label for="postal_code">Postal code</label>
+              <input type="text" name="postal_code" id="postal_code" class="form__input" >
+              <label for="city">City</label>
+              <input type="text" name="city" id="city" class="form__input">
+              <label for="province">Province</label>
+              <input type="text" name="province" id="province" class="form__input">
+              <label for="country">Country</label>
+              <input type="text" name="country" id="country" class="form__input">
+              <label for="phone">Number</label>
+              <input type="tel" name="phone" id="phone" class="form__input">
+              <label for="email">e-mail</label>
+              <input type="email" name="email" id="email" class="form__input">
+            </fieldset>
+          </div>  
+        </form>
+      </div>
+      <div class="review">
+              <h2>Review your order</h2>
+              <h3>Product Qty Subtotal</h3>
+              <p>BigCityLife Jacket 1 $ 250</p>
+              <p>Shipping $20</p>
+              <p>Tax $ 50</p>
+              <h3>Total $ 30</h3>
+      </div>
+      <div class="checkout_cta">
+            <a href="checkoutsuccess.html" >Confirm payment</a>
+      </div>
+     </div>
+    </section>
   </main>
