starting with specific page

--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -22,3 +22,19 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <section class="specific_images">
+      <div class="img_small">
+        <img src="images/Coffe_lady.jpeg">
+      </div>
+     <div class="img_small">
+       <img src="images/Mobile_lady.jpeg"> 
+     </div>
+     <div class="img_small" >
+       <img src="images/Going_lady.jpeg">
+      </div>
+      <div class="img_big">
+        <img src="images\Woman_in_yellow_jacket_with_camera.jpeg">
+      </div>
+    </section>
+  </main>
