jacketspecific is almost ready

--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -17,24 +17,46 @@
         <li><a href="men.html">men</a></li>
         <li><a href="women.html">women</a></li>
         <li><a href="kids.html">kids</a></li>
-        <li><a href="#"><img id="search" src="images/Search_icon.jpg" alt="search button">search</a></li>
+        <li><a href="search.html"><img id="search" src="images/Search_icon.jpg" alt="search button">search</a></li>
         <li><a href=checkout.html><img id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <section class="specific_images">
-      <div class="img_small">
-        <img src="images/Coffe_lady.jpeg">
+    <div class="specific_grid">
+      <section class="row">
+        <div>
+          <img src="images/Coffe_lady.jpeg" class="img_small">
+        </div>
+       <div>
+         <img src="images/Mobile_lady.jpeg" class="img_small"> 
+       </div>
+       <div>
+         <img src="images/Going_lady.jpeg"class="img_small" >
+        </div>
+      </section>
+      <div >
+        <img src="images/Woman_in_yellow_jacket_with_camera.jpeg" class="img_big">
       </div>
-     <div class="img_small">
-       <img src="images/Mobile_lady.jpeg"> 
-     </div>
-     <div class="img_small" >
-       <img src="images/Going_lady.jpeg">
-      </div>
-      <div class="img_big">
-        <img src="images\Woman_in_yellow_jacket_with_camera.jpeg">
-      </div>
-    </section>
+      <section class="product_descriptiption">
+        <h2>BigCityLife</h2>
+        <p>250 USD</p>
+        <div class="sizes">
+          <p>M</p>
+          <p>L</p>
+          <p>XL</p>
+        </div>
+        <button></button>
+        <button></button>
+        <button></button>
+        <p>Qty</p>
+        <button>1</button>
+        <button class="addtocart_cta">Add to cart</button>
+        <h3>Details</h3>
+        <ul>
+          <li>Waterproof, light and convenient jacket for everyday and outdoor live.</li>
+          <li>Ventilation zipper on the side.</li>
+        </ul>
+      </section>
+    </div>
   </main>
