--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </section>
     <section class="content">
         <div>
-            <p>A raincoat also known as rainsuit. In most fashion market, including America, France</p>
-            <p>Asia, etc raincoat refers to both the top and bottom including trousers</p>
+            <p>A raincoat is also known as rainsuit. In most fashion markets, including the Americas, France or</p>
+            <p>Asia, raincoat refers to both the top and bottom clothes, including trousers.</p>
         </div>
     </section>
     <section class="featured">
