--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -38,17 +38,14 @@
       <div >
         <img src="images/Woman_in_yellow_jacket_with_camera.jpeg" class="img_big">
       </div>
-      <section class="product_descriptiption">
+      <section class="product_description">
         <h2>BigCityLife</h2>
         <p>250 USD</p>
-        <div class="sizes">
-          <p>M</p>
-          <p>L</p>
-          <p>XL</p>
+      <div class="sizes">
+          <p class="sizes_item">M</p>
+          <p class="sizes_item">L</p>
+          <p class="sizes_item">XL</p>
         </div>
-        <button></button>
-        <button></button>
-        <button></button>
         <p>Qty</p>
         <button>1</button>
         <button class="addtocart_cta">Add to cart</button>
