--- a/checkoutsuccess.html
+++ b/checkoutsuccess.html
@@ -28,4 +28,7 @@
             <h1>Thank you for your order!</h1>
           </div>
         </section>
+        <footer> 
+          <p>&copy; Bori Kokeny</p>
+      </footer>
       </main>
