--- a/kids.html
+++ b/kids.html
@@ -87,5 +87,8 @@
             <p>650 USD</p>
           </div>
       </section>
+      <footer> 
+        <p>&copy; Bori Kokeny</p>
+    </footer>
     </main>
 </body>
