--- a/women.html
+++ b/women.html
@@ -87,6 +87,9 @@
               <p>650 USD</p>
             </div>
         </section>
+        <footer> 
+          <p>&copy; Bori Kokeny</p>
+      </footer>
       </main>
 </body>  
 
