--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="men.html">men</a></li>
         <li><a href="women.html">women</a></li>
         <li><a href="kids.html">kids</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
         <li><a href="search.html"><img id="search" src="images/Search_icon.jpg" alt="search button"></a><label>search</label></li>
         <li><a href=checkout.html><img class="nav_end" id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
       </ul>
@@ -74,8 +75,7 @@
     </section>
   </main>
   <footer> 
-      <a href="contact.html">Contact Us</a>
       <p>&copy; Bori Kokeny</p>
-    </footer>
+  </footer>
 </body>
 </html>
