--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -48,7 +48,7 @@
         </div>
         <p>Qty</p>
         <button>1</button>
-        <button class="addtocart_cta">Add to cart</button>
+        <a href="checkout.html" class="addtocart_cta">Add to cart</a> 
         <h3>Details</h3>
         <ul>
           <li>Waterproof, light and convenient jacket for everyday and outdoor live.</li>
@@ -56,4 +56,7 @@
         </ul>
       </section>
     </div>
+    <footer> 
+      <p>&copy; Bori Kokeny</p>
+  </footer>
   </main>
