--- a/men.html
+++ b/men.html
@@ -26,66 +26,69 @@
         <h1>Raincoats for men</h1>
         <h2>Home/Men</h2>
         <section class="featured_2">
-          <div class="products">
+          <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_in_yellow_jacket_lauging.jpeg" alt="Man in yellow jacket and hat"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
-          <div class="products">
+          <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_in_yellow_hat.jpeg" alt="Man in yellow jacket and a hat"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
-          <div class="products">
+          <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_in_yellow_jacket.jpeg" alt="Man in yellow jacket"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
-          <div class="products">
+          <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_in_yellow_jacket_in_forest.jpeg" alt="Man in yellow jacket in the forest"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
-          <div class="products">
+          <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_in_yellow_jacket_on_the_rock.jpeg" alt="Man in yellow jacket on the rock"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
-          <div class="products">
+          <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_in_yellow_jacket_shore.jpeg" alt="Man in yellow jacket on the shore"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
-          <div class="products">
+          <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_with_a_bag.jpeg" alt="Man in green jacket on a bike with a bag"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
-          <div class="products">
+          <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_in_light_green_jacket.jpeg" alt="Man in light green jacket"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
-          <div class="products">
+          <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_in_red_jacket_fjell.jpeg" alt="Man with beard in red jacket"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
-          <div class="products">
+          <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_in_dark_blue_jacket.jpeg" alt="Man in dark blue jacket in the rain"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
-          <div class="products">
+          <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_in_green_jacket.jpeg" alt="Man in green jacket and cap"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
-          <div class="products">
+          <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_in_hat.jpeg" alt="Man in green jacket in the forest"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
       </section>
+      <footer> 
+        <p>&copy; Bori Kokeny</p>
+    </footer>
     </main>
 </body>
