--- a/newproducts.html
+++ b/newproducts.html
@@ -88,6 +88,8 @@
                 <p>650 USD</p>
               </div>
           </section>
-
+          <footer> 
+            <p>&copy; Bori Kokeny</p>
+        </footer>
     </main>
 </body>
