--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <header>
         <a href="#"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
       <nav>
-      <ul>
+      <ul class="menu_list">
         <li><a href="men.html">men</a></li>
         <li><a href="women.html">women</a></li>
         <li><a href="kids.html">kids</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="search.html"><img id="search" src="images/Search_icon.jpg" alt="search button"></a><label>search</label></li>
+        <li><a href="contact.html">contact</a></li>
+        <li><a href="search.html"><img id="search" src="images/Search_icon.jpg" alt="search button">search</a></li>
         <li><a href=checkout.html><img class="nav_end" id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
       </ul>
     </nav>
