--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -41,7 +41,7 @@
       </div>
       <section class="product_description">
         <h2>BigCityLife</h2>
-        <p>250 USD</p>
+        <strong>250 USD</strong>
       <div class="sizes">
           <p class="sizes_item">M</p>
           <p class="sizes_item">L</p>
@@ -51,7 +51,7 @@
         <button>1</button>
         <a href="checkout.html" class="addtocart_cta">Add to cart</a> 
         <h3>Details</h3>
-        <ul>
+        <ul class="details">
           <li>Waterproof, light and convenient jacket for everyday and outdoor live.</li>
           <li>Ventilation zipper on the side.</li>
         </ul>
