new css pages yeah:)

--- a/men.html
+++ b/men.html
@@ -8,6 +8,8 @@
     <title>Rainydays | Men</title>
     <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/productpages.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -26,7 +28,7 @@
       <main class="jackets">
         <h1>Raincoats for men</h1>
         <h2>Home/Men</h2>
-        <section class="featured_2">
+        <section class="featured_1">
           <div class="products1">
             <a href="jacketspecific.html"><img src="images/Man_in_yellow_jacket_lauging.jpeg" alt="Man in yellow jacket and hat"></a>
             <h2>Softshell Raincoat</h2>
@@ -57,37 +59,39 @@
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
           </div>
-          <div class="products1">
-            <a href="jacketspecific.html"><img src="images/Man_with_a_bag.jpeg" alt="Man in green jacket on a bike with a bag"></a>
-            <h2>Softshell Raincoat</h2>
-            <p>650 USD</p>
-          </div>
-          <div class="products1">
-            <a href="jacketspecific.html"><img src="images/Man_in_light_green_jacket.jpeg" alt="Man in light green jacket"></a>
-            <h2>Softshell Raincoat</h2>
-            <p>650 USD</p>
-          </div>
-          <div class="products1">
-            <a href="jacketspecific.html"><img src="images/Man_in_red_jacket_fjell.jpeg" alt="Man with beard in red jacket"></a>
-            <h2>Softshell Raincoat</h2>
-            <p>650 USD</p>
-          </div>
-          <div class="products1">
-            <a href="jacketspecific.html"><img src="images/Man_in_dark_blue_jacket.jpeg" alt="Man in dark blue jacket in the rain"></a>
-            <h2>Softshell Raincoat</h2>
-            <p>650 USD</p>
-          </div>
-          <div class="products1">
-            <a href="jacketspecific.html"><img src="images/Man_in_green_jacket.jpeg" alt="Man in green jacket and cap"></a>
-            <h2>Softshell Raincoat</h2>
-            <p>650 USD</p>
-          </div>
-          <div class="products1">
-            <a href="jacketspecific.html"><img src="images/Man_in_hat.jpeg" alt="Man in green jacket in the forest"></a>
-            <h2>Softshell Raincoat</h2>
-            <p>650 USD</p>
-          </div>
-      </section>
+        </section>
+          <section class="featured_2">
+            <div class="products1">
+              <a href="jacketspecific.html"><img src="images/Man_with_a_bag.jpeg" alt="Man in green jacket on a bike with a bag"></a>
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+            </div>
+            <div class="products1">
+              <a href="jacketspecific.html"><img src="images/Man_in_light_green_jacket.jpeg" alt="Man in light green jacket"></a>
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+            </div>
+            <div class="products1">
+              <a href="jacketspecific.html"><img src="images/Man_in_red_jacket_fjell.jpeg" alt="Man with beard in red jacket"></a>
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+            </div>
+            <div class="products1">
+              <a href="jacketspecific.html"><img src="images/Man_in_dark_blue_jacket.jpeg" alt="Man in dark blue jacket in the rain"></a>
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+            </div>
+            <div class="products1">
+              <a href="jacketspecific.html"><img src="images/Man_in_green_jacket.jpeg" alt="Man in green jacket and cap"></a>
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+            </div>
+            <div class="products1">
+              <a href="jacketspecific.html"><img src="images/Man_in_hat.jpeg" alt="Man in green jacket in the forest"></a>
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+            </div>
+          </section>
       <footer> 
         <p>&copy; Bori Kokeny</p>
     </footer>
