--- a/checkout.html
+++ b/checkout.html
@@ -8,6 +8,8 @@
     <title>Rainydays | Checkout</title>
     <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/checkout.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
 </head>
 <body>
   <header>
