--- a/search.html
+++ b/search.html
@@ -8,6 +8,8 @@
     <title>Rainydays | Home</title>
     <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/search.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
 </head>
 <body>
     <header>
