contact page image crop

--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
     </nav>
   </header>
 <main>
-  <div>
-    <img src="images/wideimagecomp2.jpeg" alt="Young couple in the mountains" class="contact_img">
+  <div class="contact_picture">
+    <img class="contact_img">
   </div>
   <div class="contacts">
     <div class="contact_points">
