bit more jacketspecific

--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -52,11 +52,11 @@
         <p>Qty</p>
         <button>1</button>
         <a href="checkout.html" class="addtocart_cta">Add to cart</a> 
-        <h3>Details</h3>
-        <ul class="details">
-          <li>Waterproof, light and convenient jacket for everyday and outdoor live.</li>
-          <li>Ventilation zipper on the side.</li>
-        </ul>
+          <h3 class="details_1">Details</h3>
+          <ul class="details_2">
+            <li>Waterproof, light and convenient jacket for everyday and outdoor live.</li>
+            <li>Ventilation zipper on the side.</li>
+          </ul>
       </section>
     </div>
     <footer> 
