--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -49,8 +49,20 @@
           <p class="sizes_item">L</p>
           <p class="sizes_item">XL</p>
         </div>
-        <p>Qty</p>
-        <button>1</button>
+        <div class="qty_1">
+          <div class="qty_3">
+            <p>Qty</p>
+          </div>
+          <div>
+            <fieldset class="qty_2">
+              <select name="quantity">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+              </select>
+            </fieldset>
+          </div>
+        </div>
         <a href="checkout.html" class="addtocart_cta">Add to cart</a> 
           <h3 class="details_1">Details</h3>
           <ul class="details_2">
