--- a/men.html
+++ b/men.html
@@ -16,7 +16,7 @@
           <a href="index.html"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
         <nav>
           <ul>
-            <li><a href="men.html">men</a></li>
+            <li><a href="men.html" class="active">men</a></li>
             <li><a href="women.html">women</a></li>
             <li><a href="kids.html">kids</a></li>
             <li><a href="contact.html">contact</a></li>
