--- a/women.html
+++ b/women.html
@@ -17,7 +17,7 @@
         <nav>
           <ul>
             <li><a href="men.html">men</a></li>
-            <li><a href="women.html">women</a></li>
+            <li><a href="women.html" class="active">women</a></li>
             <li><a href="kids.html">kids</a></li>
             <li><a href="contact.html">contact</a></li>
             <li><a href="search.html"><img id="search" src="images/Search_icon.jpg" alt="search button">search</a></li>
