--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <main>
     <section class="welcome">
         <div class="welcome__content">
-          <h1>Pushing the Comfort Zone</h1>
-          <a href="newproducts.html" class="cta">New Products</a>
+          <h1 id="pushing">Pushing the Comfort Zone</h1>
+          <a href="newproducts.html" class="welcome_cta">New Products</a>
         </div>
       </section>
     <section class="content">
