@media img again

--- a/women.html
+++ b/women.html
@@ -28,7 +28,7 @@
       <main class="jackets">
           <h1>Raincoats for women</h1>
           <h2>Home/Women</h2>
-          <section class="featured">
+          <section class="featured2">
             <div class="products">
               <a href="jacketspecific.html"><img src="images/Woman_in_yellow_jacket_in_wind.jpeg" alt="Woman in yellow jacket in blowing wind"></a>
               <h2>Softshell Raincoat</h2>
