--- a/kids.html
+++ b/kids.html
@@ -28,7 +28,7 @@
       <main class="jackets">
         <h1>Raincoats for kids</h1>
         <h2>Home/Kids</h2>
-        <section class="featured">
+        <section class="featured2">
           <div class="products">
             <a href="jacketspecific.html"><img src="images/Kid_in_beige_jacket.jpeg" alt="Little girl in beige jacket jumping in the water"></a>
             <h2>Softshell Raincoat</h2>
