--- a/men.html
+++ b/men.html
@@ -28,7 +28,7 @@
       <main class="jackets">
         <h1>Raincoats for men</h1>
         <h2>Home/Men</h2>
-        <section class="featured">
+        <section class="featured2">
           <div class="products">
             <a href="jacketspecific.html"><img src="images/Man_in_yellow_jacket_lauging.jpeg" alt="Man in yellow jacket and hat"></a>
             <h2>Softshell Raincoat</h2>
