--- a/checkout.html
+++ b/checkout.html
@@ -29,7 +29,7 @@
   <main>
     <section class="checkout">
       <div class="checkout_picture">
-        <img class="item-1" id="checkout_img" src="images/Woman_in_yellow_jacket_on_the_cornfield.jpeg" alt="Two young women laughing">
+        <img id="checkout_img" src="images/Woman_in_yellow_jacket_on_the_cornfield.jpeg" alt="Two young women laughing">
       </div>
       <div>
         <form method="POST">
