--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
     </nav>
   </header>
   <main>
-    <section class="welcome">
-        <div class="welcome__content">
+    <div class="welcome" >
+      <img>
+    </div>
+        <section class="welcome__content">
           <h1 id="pushing">Pushing the Comfort Zone</h1>
           <a href="newproducts.html" class="welcome_cta">New Products</a>
-        </div>
+        </section>
       </section>
     <section class="content">
         <div>
