all @media ready

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 </head>
 <body>
   <header>
-        <a href="#"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
-        <nav>
-      <ul class="menu_list">
+        <a href="#">
+        <img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+    <nav>
+      <ul>
         <li><a href="men.html">men</a></li>
         <li><a href="women.html">women</a></li>
         <li><a href="kids.html">kids</a></li>
