first checkup before starting CA

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 <body>
   <header>
     <a href="index.html"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+    <label for="hamburger-menu" class="hamburger-menu-handle"></label>
+    <input
+    type="checkbox"
+    class="hamburger-menu"
+    id="hamburger-menu"
+    checked
+    />
     <nav>
       <ul>
         <li><a href="men.html">men</a></li>
