--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fashionable and sporty raincoats for active people" />
-    <title>Rainydays | Home</title>
+    <title>Home | Rainydays</title>
     <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
@@ -34,17 +34,19 @@
     />
     <nav>
       <ul>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="men.html">men</a></li>
         <li><a href="women.html">women</a></li>
         <li><a href="kids.html">kids</a></li>
         <li><a href="contact.html">contact</a></li>
-        <li><a href="search.html"><img id="search" src="images/Search_icon.jpg" alt="search button">search</a></li>
+        <input type="text" id="search_field" onkeyup="myFunction()" placeholder="Search for jackets..." title="Type in a name">
+        <li><img id="search" src="images/Search_icon.jpg" alt="search button"></li>
         <li><a href=checkout.html><img class="nav_end" id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <div class="welcome" >
+    <div class="welcome">
       <img>
     </div>
         <section class="welcome__content">
@@ -99,5 +101,6 @@
   <footer> 
       <p>&copy; Bori Kokeny</p>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
