--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="You are at the checkout page" />
-    <title>Rainydays | Checkout</title>
+    <title>Checkout | Rainydays</title>
     <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/checkout.css" rel="stylesheet" />
