--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="BigCityLife Jacket for sporty and fashionable Women" />
-    <title>Rainydays | Product Page</title>
+    <title>Product Page | Rainydays</title>
     <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/jacketspecific.css" rel="stylesheet" />
@@ -46,7 +46,7 @@
          <img src="images/Mobile_lady.jpeg" class="img_small"> 
        </div>
        <div>
-         <img src="images/Going_lady.jpeg"class="img_small" >
+         <img src="images/Going_lady.jpeg" class="img_small">
         </div>
       </section>
       <div >
