save on tuesday

--- a/checkoutsuccess.html
+++ b/checkoutsuccess.html
@@ -42,7 +42,9 @@
             <h1>Thank you for your order!</h1>
           </div>
         </section>
-        <footer> 
-          <p>&copy; Bori Kokeny</p>
-      </footer>
       </main>
+      <footer> 
+        <p>&copy; Bori Kokeny</p>
+      </footer>
+</body>
+</html>
