--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -54,25 +54,21 @@
       </div>
       <section class="product_description">
         <h1>BigCityLife</h1>
-        <strong>250 USD</strong>
-      <div class="sizes">
+        <h2>250 USD</h2>
+      <!-- <div class="sizes">
           <p class="sizes_item">M</p>
           <p class="sizes_item">L</p>
           <p class="sizes_item">XL</p>
-        </div>
+      </div> -->
         <div class="qty_1">
-          <div class="qty_3">
+          <!-- <div class="qty_3">
             <p>Qty</p>
           </div>
           <div>
             <fieldset class="qty_2">
-              <select name="quantity">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-              </select>
+              <input class="quantity-input" type="number">
             </fieldset>
-          </div>
+          </div> -->
         </div>
         <a href="checkout.html" class="addtocart_cta">Add to cart</a> 
           <h3 class="details_1">Details</h3>
@@ -82,7 +78,10 @@
           </ul>
       </section>
     </div>
-    <footer> 
-      <p>&copy; Bori Kokeny</p>
-  </footer>
   </main>
+<footer> 
+  <p>&copy; Bori Kokeny</p>
+</footer>
+  <script src="js/jacketspecific.js"></script>     
+</body>
+</html>
