--- a/women.html
+++ b/women.html
@@ -101,10 +101,11 @@
               <p>650 USD</p>
             </div>
         </section>
-        <footer> 
-          <p>&copy; Bori Kokeny</p>
-      </footer>
       </main>
-</body>  
+      <footer> 
+        <p>&copy; Bori Kokeny</p>
+      </footer>
+</body> 
+</html> 
 
  
