--- a/checkout.html
+++ b/checkout.html
@@ -39,50 +39,64 @@
   </header>
   <main>
     <section class="checkout">
-      <div class="checkout_picture">
+      <!-- <div class="checkout_picture">
         <img id="checkout_img" src="images/Woman_in_yellow_jacket_on_the_cornfield.jpeg" alt="Two young women laughing">
-      </div>
+      </div> -->
+      <div class="review">
+        <h2>Review your order</h2>
+        <div class="review-row">
+          <h3 class="review-title">Product</h3>
+          <h3 class="review-title">Price</h3>
+          <h3 class="review-title">Quantity</h3>
+        </div>
+        <div class="review-fillup">
+          <div>
+            <img class="review-fillup-parts cart-img" src="images/Woman_in_yellow_jacket_with_camera.jpeg">
+            <span class="review-fillup-parts cart-name">BigCityLife</span>
+          </div>
+          <span class="review-fillup-parts cart-price">250 USD</span>
+          <div>
+            <input class="review-fillup-parts quantity-input" type="number">
+            <button class="remove-button">Remove</button>
+          </div>
+        </div>
+        <h3 class="total-sum">Total $ 30</h3>
+        </div >
       <div>
         <form method="POST">
           <div>
             <fieldset>
-              <legend>My Cart</legend>
-              <label for="first_name">First name</label>
-              <input type="text" name="first_name" id="first_name" class="form__input">
-              <label for="last_name">Last name</label>
-              <input type="text" name="last_name" id="last_name" class="form__input">
-              <label for="address">Street address</label>
-              <input type="text" name="address" id="address">
-              <label for="postal_code">Postal code</label>
-              <input type="text" name="postal_code" id="postal_code" class="form__input" >
-              <label for="city">City</label>
-              <input type="text" name="city" id="city" class="form__input">
-              <label for="province">Province</label>
-              <input type="text" name="province" id="province" class="form__input">
-              <label for="country">Country</label>
-              <input type="text" name="country" id="country" class="form__input">
-              <label for="phone">Number</label>
-              <input type="tel" name="phone" id="phone" class="form__input">
-              <label for="email">e-mail</label>
-              <input type="email" name="email" id="email" class="form__input">
+              <legend>Delivery</legend>
+              <input class="input-simple" type="email" name="email" id="email" class="form__input" placeholder="E-mail">
+              <div class="input-onerow">
+                <input type="text" name="first_name" id="first_name" class="form__input" placeholder="First name">
+                <input type="text" name="last_name" id="last_name" class="form__input" placeholder="Last name">
+              </div>
+              <input class="input-simple" type="text" name="address" id="address" placeholder="Address">
+              <div class="input-onerow">
+                <input type="text" name="address" id="address" placeholder="Address 2">
+                <input type="text" name="postal_code" id="postal_code" class="form__input" placeholder="Postal Code">
+              </div>
+              <div class="input-onerow">
+                <input type="text" name="city" id="city" class="form__input" placeholder="City">
+                <input type="text" name="province" id="province" class="form__input" placeholder="Region">
+              </div>
+              <div class="input-onerow">
+                <input type="text" name="country" id="country" class="form__input" placeholder="Location">
+                <input type="tel" name="phone" id="phone" class="form__input" placeholder="Phone">
+              </div>
+              <button class="checkout_cta">Confirm payment</button>
             </fieldset>
           </div>  
         </form>
       </div>
-      <div class="review">
-              <h2>Review your order</h2>
-              <h3>Product Qty Subtotal</h3>
-              <p>BigCityLife Jacket 1 $ 250</p>
-              <p>Shipping $20</p>
-              <p>Tax $ 50</p>
-              <h3>Total $ 30</h3>
-      </div>
-      <div class="checkout_cta">
-            <a href="checkoutsuccess.html" >Confirm payment</a>
-      </div>
      </div>
     </section>
+  </main>
     <footer> 
       <p>&copy; Bori Kokeny</p>
   </footer>
-  </main>
+  <script src="js/checkout.js"></script>  
+  </body>
+  </html> 
+  
