--- a/men.html
+++ b/men.html
@@ -101,8 +101,9 @@
               <p>650 USD</p>
             </div>
           </section>
-      <footer> 
-        <p>&copy; Bori Kokeny</p>
-    </footer>
     </main>
+    <footer> 
+      <p>&copy; Bori Kokeny</p>
+    </footer>
 </body>
+</html>
